[gd_scene load_steps=6 format=3 uid="uid://bkk73xwm67dxt"]

[ext_resource type="Script" path="res://assets/scripts/level/level_interface.gd" id="1_8n5fq"]
[ext_resource type="Script" path="res://assets/scripts/level/end_interface.gd" id="2_bh5b0"]
[ext_resource type="SpriteFrames" uid="uid://dl6rwdrl174dp" path="res://assets/sprites/zombies/enemy_small_spriteframes.tres" id="2_ry0nk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mkfhk"]
content_margin_right = 20.0
bg_color = Color(0, 0, 0, 0.509804)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ka2i5"]
bg_color = Color(0, 0, 0, 0.54902)

[node name="LevelInterface" type="CanvasLayer"]
script = ExtResource("1_8n5fq")

[node name="MoneyDisplay" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 270.0
offset_bottom = 60.0
bbcode_enabled = true
text = "[img=40x40]assets/sprites/ui/coin_cat.png[/img] [font_size=41]0[/font_size]"
shortcut_keys_enabled = false

[node name="HealthDisplay" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 10.0
offset_top = 60.0
offset_right = 270.0
offset_bottom = 110.0
bbcode_enabled = true
text = "[img=40x40]assets/sprites/ui/heart_cat.png[/img] [font_size=41]0[/font_size]"
shortcut_keys_enabled = false

[node name="WaveDisplay" type="RichTextLabel" parent="."]
offset_left = 10.0
offset_top = 110.0
offset_right = 270.0
offset_bottom = 160.0
bbcode_enabled = true
text = "[font_size=41]Wave: 0[/font_size]"
shortcut_keys_enabled = false

[node name="TowerSelectorContainer" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(0, 250)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_mkfhk")

[node name="TowersList" type="HBoxContainer" parent="TowerSelectorContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
offset_left = 15.0
offset_top = -1.0
offset_right = 1585.0
offset_bottom = 250.0
size_flags_vertical = 4
size_flags_stretch_ratio = 1.2
theme_override_constants/separation = 15

[node name="EndInterface" type="PanelContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ka2i5")
script = ExtResource("2_bh5b0")

[node name="PanelContainer" type="PanelContainer" parent="EndInterface"]
texture_filter = 1
custom_minimum_size = Vector2(800, 500)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"ThemedPanel"

[node name="ContentContainer" type="MarginContainer" parent="EndInterface/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="EndInterface/PanelContainer/ContentContainer"]
texture_filter = 1
position = Vector2(640, 310)
scale = Vector2(5, 5)
sprite_frames = ExtResource("2_ry0nk")
animation = &"walk_right"
autoplay = "walk_right"

[node name="VBoxContainer2" type="VBoxContainer" parent="EndInterface/PanelContainer/ContentContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="EndInterface/PanelContainer/ContentContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
bbcode_enabled = true
text = "[center][font size=50][color=70ffee]You won[/color][/font][/center]"

[node name="VBoxContainer" type="VBoxContainer" parent="EndInterface/PanelContainer/ContentContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 70
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EndInterface/PanelContainer/ContentContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="KilledZombies" type="RichTextLabel" parent="EndInterface/PanelContainer/ContentContainer/VBoxContainer2/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
bbcode_enabled = true
text = "[font size=36]Killed Zombies : %s[img=32]assets/sprites/ui/small_zombie.png[/img] %s[img=32]assets/sprites/ui/big_zombie.png[/img][/font]"

[node name="TotalMoney" type="RichTextLabel" parent="EndInterface/PanelContainer/ContentContainer/VBoxContainer2/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
bbcode_enabled = true
text = "[font size=36]Total Money : %s[/font]"

[node name="Health" type="RichTextLabel" parent="EndInterface/PanelContainer/ContentContainer/VBoxContainer2/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
bbcode_enabled = true
text = "[font size=36]Health : %s[/font]"

[node name="TotalScore" type="RichTextLabel" parent="EndInterface/PanelContainer/ContentContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
bbcode_enabled = true
text = "[font size=36]Score : %s[/font]"

[node name="ButtonsContainer" type="MarginContainer" parent="EndInterface/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 410
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = -60

[node name="HBoxContainer" type="HBoxContainer" parent="EndInterface/PanelContainer/ButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 250
alignment = 1

[node name="Restart" type="Button" parent="EndInterface/PanelContainer/ButtonsContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "restart"

[node name="Home" type="Button" parent="EndInterface/PanelContainer/ButtonsContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "home"

[connection signal="pressed" from="EndInterface/PanelContainer/ButtonsContainer/HBoxContainer/Restart" to="EndInterface" method="_on_restart_pressed"]
[connection signal="pressed" from="EndInterface/PanelContainer/ButtonsContainer/HBoxContainer/Home" to="EndInterface" method="_on_home_pressed"]
